Fix- Changes overflow property

--- a/src/Pages/Authentication/Auth.css
+++ b/src/Pages/Authentication/Auth.css
@@ -9,7 +9,7 @@
   padding: 2rem;
   grid-column: span 2;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .form {
